--- a/src/sales/templates/sales/home.html
+++ b/src/sales/templates/sales/home.html
@@ -1,9 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
    <title>
        Bookstore Home
    </title>
    <body>
-       Welcome to our Bookstore
+       <h1 style="text-align: center;">Welcome to our Bookstore</h1>
+       <br>
+       <img src="{% static 'sales/images/bookstore.jpg' %}" alt="home" width="600" height="300">
    </body>
 </html>
