Updated Bookstore Practice Code
Updated bookstore practice project as I followed along the instructions for exercise 2.6.

--- a/src/books/templates/books/main.html
+++ b/src/books/templates/books/main.html
@@ -5,6 +5,7 @@
    </title>
    <body>
        <h1 style="text-align: center;">Books For Sale</h1>
+       <a href ="{%url 'logout' %}"> Logout </a>
    </body>
 
    <table border="1" cellpadding="5" cellspacing = "5">    {% comment%} start of table  {% endcomment%}
