--- a/src/sales/templates/sales/home.html
+++ b/src/sales/templates/sales/home.html
@@ -2,12 +2,17 @@
 
 <!DOCTYPE html>
 <html>
-   <title>
-       Bookstore Home
-   </title>
-   <body>
-       <h1 style="text-align: center;">Welcome to our Bookstore</h1>
-       <br>
-       <img src="{% static 'sales/images/bookstore.jpg' %}" alt="home" width="600" height="300">
-   </body>
+    <title>
+        Bookstore's Home
+    </title>
+    <body>
+        <h1 style="text-align:center">Welcome to our Bookstore</h1>
+        <br>
+        <br>
+        <a href ="{%url 'login' %}">  Login  </a>
+        <br>
+        <br>
+        <br>
+        <img src="{% static 'sales/images/bookstore.jpg' %}" alt="home" width="600" height="300">
+    </body>
 </html>
